nonPH_analysis/CCA/logs/archives/stbl_cca677508.err
Traceback (most recent call last):
  File "/scratch/tyoeasley/brain_representations/src_py/run_lindecomp_stbl.py", line 4, in <module>
    import lindecomp_stability as ld_stb
  File "/mnt/beegfs/scratch/tyoeasley/brain_representations/src_py/lindecomp_stability.py", line 10, in <module>
    import lindecomp_brainrep as ld_br
  File "/mnt/beegfs/scratch/tyoeasley/brain_representations/src_py/lindecomp_brainrep.py", line 105
    else:
       ^
IndentationError: expected an indented block
